--- a/workspace/hr-worker/src/main/resources/application.properties
+++ b/workspace/hr-worker/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=hr-worker
-server.port=8001
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Port
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
