--- a/workspace/hr-payroll/src/main/resources/application.properties
+++ b/workspace/hr-payroll/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8101
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+hystrix.commando.default.excecution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
