--- a/workspace/hr-worker/src/main/resources/application.properties
+++ b/workspace/hr-worker/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=hr-worker
 
-# Eureka
+# eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-# Port
+# server port
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
 
-# Database configuration
+# memory database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
