--- a/workspace/hr-payroll/src/main/resources/application.properties
+++ b/workspace/hr-payroll/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=hr-payroll
-server.port=8101
+
+# server port
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
