--- a/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=hr-api-gateway-zuul
 server.port=8765
 
+#eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+# timeout
+hystrix.commando.default.excecution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
+# routes
+#worker
 zuul.routes.worker.service-id=hr-worker
 zuul.routes.worker.path=/hr-worker/**
-
+#payroll
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/hr-payroll/**
