--- a/workspace/hr-user/src/main/resources/application.properties
+++ b/workspace/hr-user/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# jpa
+spring.jpa.defer-datasource-initialization=true
