--- a/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -16,3 +16,6 @@ zuul.routes.worker.path=/hr-worker/**
 #payroll
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/hr-payroll/**
+#user
+zuul.routes.user.service-id=hr-user
+zuul.routes.user.path=/hr-user/**
