--- a/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -19,3 +19,6 @@ zuul.routes.payroll.path=/hr-payroll/**
 #user
 zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/hr-user/**
+#oauth
+zuul.routes.oauth.service-id=hr-oauth
+zuul.routes.oauth.path=/hr-oauth/**
