--- a/workspace/hr-oauth/src/main/resources/application.properties
+++ b/workspace/hr-oauth/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=hr-oauth
 
+# eureka
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
