--- a/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/workspace/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -22,3 +22,4 @@ zuul.routes.user.path=/hr-user/**
 #oauth
 zuul.routes.oauth.service-id=hr-oauth
 zuul.routes.oauth.path=/hr-oauth/**
+zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
