cors and config

--- a/workspace/hr-oauth/src/main/resources/application.properties
+++ b/workspace/hr-oauth/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=hr-oauth
 
 # eureka
 server.port=${PORT:0}
-eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instalnce_id:${random.value}}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
