--- a/workspace/hr-user/src/main/resources/application.properties
+++ b/workspace/hr-user/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hr-user
 
 # eureka
 server.port=${PORT:0}
-eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instalnce_id:${random.value}}
 
 # memory database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
