--- a/workspace/hr-worker/src/main/resources/application.properties
+++ b/workspace/hr-worker/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=hr-worker
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # server port
 server.port=${PORT:0}
-eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instalnce_id:${random.value}}
 
 # memory database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
