--- a/workspace/hr-payroll/src/main/resources/application.properties
+++ b/workspace/hr-payroll/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hr-payroll
 
 # server port
 server.port=${PORT:0}
-eureka.instance.instance-id=${spring.applicantion.name}:${spring.application.instalnce_id:${random.value}}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instalnce_id:${random.value}}
 
 # eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
