db config move to git

--- a/workspace/hr-user/src/main/resources/application.properties
+++ b/workspace/hr-user/src/main/resources/application.properties
@@ -3,14 +3,7 @@ spring.application.name=hr-user
 # eureka
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instalnce_id:${random.value}}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# memory database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# jpa
+#database
 spring.jpa.defer-datasource-initialization=true
